syntax = "proto3";
package messages;

message HubState {
  uint32 last_eth_block = 1;
}
